vlib/v/checker/tests/wrong_ref_type_as_concrete_err.out
vlib/v/checker/tests/wrong_ref_type_as_concrete_err.vv:9:39: error: cannot use &Type as generic concrete type, declare the function parameter or struct member as &T instead
    7 | 
    8 | fn main() {
    9 |     mut dl := datatypes.DoublyLinkedList[&User]{}
      |                                          ^
   10 |     println(dl)
   11 | }
