vlib/v/checker/tests/wrong_ref_type_as_concrete_err.vv
import datatypes

[heap]
struct User {
	name string
}

fn main() {
	mut dl := datatypes.DoublyLinkedList[&User]{}
	println(dl)
}
